ecmascript/parser/tests/test262-error-references/fail/94535dc25ef762ee.js.stderr
error: Expected unicode escape
 --> $DIR/tests/test262-parser/fail/94535dc25ef762ee.js:1:16
  |
1 | var x = /[a-z]/\\ux
  |                ^

